# kaggle_tpu_graph

./: .gitignore  README.md  pyproject.toml  setup.cfg
.hooks/: .pre-commit-config.yaml
scripts/: .gitignore  add_features.py  submit.sh  tile_training.py  training.py  training_v2.py  training_v3.py  training_v4.py  training_v5.py  training_v6.py  training_v7.py  training_v8.py
src/tpu_graph/: __init__.py  constants.py
src/tpu_graph/data/: __init__.py  data_loader.py
src/tpu_graph/networks/: __init__.py  networks.py  tile_networks.py
src/tpu_graph/proto/: hlo_pb2.py  tuning_pb2.py  xla_data_pb2.py
src/tpu_graph/training/: evaluation.py  losses.py  ltr.py
src/tpu_graph/training/ltr/: lambda_losses.py  pairwise_losses.py  utils.py
src/tpu_graph/utils/: feature_extraction.py  random_walk_pe.py  sparse_gradients.py
