[metadata]
name = tpu_graph
version = attr: tpu_graph.__version__
author = Fluri Janis
author_email = janis.fluri@hotmail.ch
url = TBD
description = A simple package to train some networks for the Kaggle competition
long_description = file: README.md
long_description_content_type = text/markdown
keywords = TPU Graph, GNN, Graph Neural Networks, Kaggle

[options]
package_dir=
    =src
install_requires =
    torch
    torch_geometric
    torch_scatter
    wandb
    click
    tqdm
    numba
    numpy
    scipy
    pathlib
    pre-commit
    black
    flake8

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,W503
